# Floral-V1

./: AvailabilityDesigner.py  README.md  pyproject.toml  requirements.txt
floral_v1/: ai_engine.py  cli_dash.py  cli_smoke.py  logging_config.py  scenarios.py
floral_v1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
floral_v1/app/: app.py  feature_flags.py  forms.py  layout.py  paths.py  state.py
floral_v1/app/assets/: floral.css
floral_v1/app/callbacks/: __init__.py  ai_callbacks.py  availability_callbacks.py  des_callbacks.py  export_callbacks.py  geometry_callbacks.py  optimizer_callbacks.py  pipeline_callbacks.py  site_plan_callbacks.py  sizing_callbacks.py  user_callbacks.py
floral_v1/core/availability/: analytical.py
floral_v1/core/des/: des_core.py  des_engine.py  engine.py
floral_v1/core/models/: __init__.py  entities.py
floral_v1/core/optimizer/: adapters.py  engine.py
floral_v1/core/optimizer/data/: cost_data.json
floral_v1/core/optimizer/digital_twin/data/: README.md
floral_v1/core/optimizer/digital_twin/models/: __init__.py  fleet_sizing.py  g3520h_simple_derated.py  solar.py
floral_v1/core/site_plan/: blender_export.py  builder.py  opentopo_client.py  placement.py
floral_v1/core/site_plan/data/: boundary.geojson
floral_v1/core/sizing/: engine.py
floral_v1/core/visualization/: __init__.py  plots.py
floral_v1/infra/docker/: Dockerfile  docker-compose.yml
floral_v1/scripts/: smoke_pipeline.py
floral_v1/tests/: conftest.py  test_des.py  test_optimizer.py  test_sizing.py
(+5 files in other folders)
